--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                <h1>Get In Touch</h1>
 
                
-               <p>Near Tariqroad,Glshan-e-Zahoor-Society,  <i class="fa-fa-marker"></i></p>
+               <p>Near Tariqroad,Glshan-e-Zahoor-Society,  <i class="fa fa-marker"></i></p>
                <p>minhajqureshi25@gmail.com  <i class="fa fa-paper-plane"> </i></p>
                <p>+923161151041 <i class="fa fa-phone"></i></p>
 
