--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                <h1>Get In Touch</h1>
 
                
-               <p>Near Tariqroad,Glshan-e-Zahoor-Society,Sector8c  <i class="fa fa-map-marker"></i></p>
+               <p>Near Tariqroad,Glshan-e-Zahoor-Society,Sector8c,House-No-R600  <i class="fa fa-map-marker"></i></p>
                <p>minhajqureshi25@gmail.com  <i class="fa fa-paper-plane"> </i></p>
                <p>+923161151041 <i class="fa fa-phone"></i></p>
 
