--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <meta name="description" content="I'm Design Professional Webs & Apps">
 
-        <meta name="Keywords" content="professional,webs,apps,">
+        <meta name="Keywords" content="apps & webs,why chosse us,we provide better,trust us,visit shop today">
 
         <meta name="author" content="Minhaj Qureshi">
 
@@ -225,9 +225,11 @@
 
                 This is a coding language 
 
-                this coding help us create apps and websites manufacture
+                this coding help us create apps and websites
 
-                & i am repair android mobiles software issues
+                We provide Penaflex,busniess cards,visiting cards,logo designing 
+
+                & 2D Animation,charactor design,Realism Sketching, Services.
 
                 "THANKU" </p>
 
