--- a/index.html
+++ b/index.html
@@ -221,17 +221,17 @@
 
             <p>I am sarting new busniess 
 
-                my work is Html/css /javascipt 
+                my main work is Html/css /javascipt 
 
                 This is a coding language 
 
-                this coding help us create apps and websites &
+                this coding help us create apps and websites
 
                 We provide Penaflex,busniess cards,visiting cards,logo designing 
 
-                2D Animation,charactor design,Realism Sketching, Services are available.
+                & 2D Animation,charactor design,Realism Sketching, Services.
 
-                 </p>
+                "THANKU" </p>
 
             <br>
 
