--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
             <p>I am sarting new busniess 
 
-                my main work is Html/css /javascipt 
+                my work is Html/css /javascipt 
 
                 This is a coding language 
 
@@ -229,9 +229,9 @@
 
                 We provide Penaflex,busniess cards,visiting cards,logo designing 
 
-                & 2D Animation,charactor design,Realism Sketching, Services.
+                & 2D Animation,charactor design,Realism Sketching, Services are avalaible.
 
-                "THANKU" </p>
+             </p>
 
             <br>
 
