--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
                 This is a coding language 
 
-                this coding help us create apps and websites
+                this coding help us create apps and websites &
 
                 We provide Penaflex,busniess cards,visiting cards,logo designing 
 
