--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <meta name="description" content="I'm Design Professional Webs & Apps">
 
-        <meta name="Keywords" content="apps & webs,why chosse us,we provide better,trust us,visit shop today">
+        <meta name="Keywords" content="visiting cards design,penaflex design,app deverlopement,web developement,charactor design,2D animation,realism sketing,logo design,banner design,web design">
 
         <meta name="author" content="Minhaj Qureshi">
 
