--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
                 We provide Penaflex,busniess cards,visiting cards,logo designing 
 
-                & 2D Animation,charactor design,Realism Sketching, Services are avalaible.
+                & 2D Animation,charactor design,Realism Sketching, Services are avalaible only online.
 
              </p>
 
