--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
                 We provide Penaflex,busniess cards,visiting cards,logo designing 
 
-                & 2D Animation,charactor design,Realism Sketching,app developement,web developement,web designing Services are avalaible only online.
+                & 2D Animation,charactor design,Realism Sketching,App Developement,Web developement,Web designing Services are avalaible only online.
 
              </p>
 
