--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <meta name="description" content="I'm Design Professional Webs & Apps">
 
-        <meta name="Keywords" content="visiting cards design,penaflex design,app deverlopement,web developement,charactor design,2D animation,realism sketing,logo design,banner design,web design">
+        <meta name="keywords" content="create apps for android,create apps without coding,build a website,make a website,develop web,to crete a website,logo making,make a logo,logo making free,make a logo free">
 
         <meta name="author" content="Minhaj Qureshi">
 
